Написали функцию для подключения к БД и вывели первые данные

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,7 @@
 AddDefaultCharset UTF-8
 
 #Если страница не существует
-ErrorDocument 404 http://localhost/new_project/404.php
+#ErrorDocument 404 http://404.php
 
 #Отключаем magic_quotes_gpc
 php_flag magic_quotes_gpc Off
